--- a/main.html
+++ b/main.html
@@ -5,50 +5,82 @@
     <title>Алгоритмы шифрования</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="main.css" rel="stylesheet">
+    <link href="style/main.css" rel="stylesheet">
 </head>
 <body class="bg-dark vh-100 d-flex flex-column justify-content-center">
-
 <div class="d-flex mb-5 justify-content-center">
     <button type="button" class="me-4 btn btn-warning" id="choose-caesar-cipher-btn">Шифр Цезаря</button>
     <button type="button" class="ms-4 btn btn-outline-warning" id="choose-rsa-algorithm-btn">Алгоритм RSA</button>
 </div>
-
 <div id="caesar-cipher-content">
     <div class="d-flex flex-column my-5 align-items-center">
         <label class="text-warning">Ключ
             <input type="number" min="1" max="32"
                    class="ms-2 bg-dark border-warning border-2 rounded text-warning text-center">
         </label>
-        <p class="mt-2 text-warning" id="caesar-cipher-key-invalid-warning">Ключ должен быть целым числом в пределах от 1 до 32</p>
+        <p class="mt-2 text-warning" id="caesar-cipher-key-invalid-warning">Ключ должен быть целым числом в пределах от
+            1 до 32</p>
         <p class="mt-2 text-warning" id="caesar-cipher-key-empty-warning">Укажите ключ в пределах от 1 до 32</p>
     </div>
-
     <div class="d-flex justify-content-around">
         <div class="d-flex flex-column">
             <p class="text-warning text-center">Исходный текст</p>
             <textarea cols="50" rows="20" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
             <button type="button" class="mt-3 btn btn-outline-warning">Зашифровать</button>
-            <p class="mt-2 text-warning text-center" id="caesar-cipher-source-text-invalid-warning">Текст не может содержать английские буквы</p>
-            <p class="mt-2 text-warning text-center" id="caesar-cipher-source-text-empty-warning">Укажите текст для шифрования</p>
+            <p class="mt-2 text-warning text-center" id="caesar-cipher-source-text-empty-warning">Укажите текст для
+                шифрования</p>
         </div>
         <div class="d-flex flex-column">
             <p class="text-warning text-center">Зашифрованный текст</p>
             <textarea cols="50" rows="20" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
             <button type="button" class="mt-3 btn btn-outline-warning">Дешифровать</button>
             <button type="button" class="mt-3 btn btn-outline-warning">Дешифровать перебором</button>
-            <p class="mt-2 text-warning text-center" id="caesar-cipher-encrypted-text-invalid-warning">Текст не может содержать английские буквы</p>
-            <p class="mt-2 text-warning text-center" id="caesar-cipher-encrypted-text-empty-warning">Укажите текст для дешифрования</p>
+            <p class="mt-2 text-warning text-center" id="caesar-cipher-encrypted-text-empty-warning">Укажите текст для
+                дешифрования</p>
         </div>
     </div>
 </div>
-
-<div id="rsa-algorithm-content">
+<div id="rsa-algorithm-content" style="display: none">
+    <div class="d-flex justify-content-around">
+        <div class="d-flex flex-column">
+            <p class="text-warning text-center">Открытый ключ</p>
+            <textarea cols="50" rows="3" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+        </div>
+        <div class="d-flex flex-column">
+            <p class="text-warning text-center">Закрытый ключ</p>
+            <textarea cols="50" rows="3" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+        </div>
+    </div>
+    <div class="d-flex justify-content-around">
+        <button type="button" class="mb-5 btn btn-outline-warning">Генерировать ключи</button>
+    </div>
+    <div class="d-flex justify-content-around">
+        <div class="d-flex flex-column">
+            <p class="text-warning text-center">Исходный текст</p>
+            <textarea cols="50" rows="16" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <button type="button" class="mt-3 btn btn-outline-warning">Зашифровать</button>
+            <p class="mt-2 text-warning text-center" id="rsa-source-text-invalid-warning" style="display: none">Текст не
+                может содержать
+                английские буквы</p>
+            <p class="mt-2 text-warning text-center" id="rsa-source-text-empty-warning" style="display: none">Укажите
+                текст для шифрования</p>
+        </div>
+        <div class="d-flex flex-column">
+            <p class="text-warning text-center">Зашифрованный текст</p>
+            <textarea cols="50" rows="16" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <button type="button" class="mt-3 btn btn-outline-warning">Дешифровать</button>
+            <p class="mt-2 text-warning text-center" id="rsa-encrypted-text-invalid-warning" style="display: none">Текст
+                не может содержать
+                английские буквы</p>
+            <p class="mt-2 text-warning text-center" id="rsa-encrypted-text-empty-warning" style="display: none">Укажите
+                текст для
+                дешифрования</p>
+        </div>
+    </div>
 </div>
-
-<script type="module" src="main.js"></script>
-<script type="module" src="caesarCipher.js"></script>
-<script src="rsaAlgorithm.js"></script>
+<script type="module" src="js/main.js"></script>
+<script type="module" src="js/caesarCipher.js"></script>
+<script type="module" src="js/rsaAlgorithm.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
