--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <button type="button" class="ms-4 btn btn-outline-warning" id="choose-rsa-algorithm-btn">Алгоритм RSA</button>
 </div>
 <div id="caesar-cipher-content">
-    <div class="d-flex flex-column my-5 align-items-center">
+    <div class="d-flex flex-column my-4 align-items-center">
         <label class="text-warning">Ключ
             <input type="number" min="1" max="32"
                    class="ms-2 bg-dark border-warning border-2 rounded text-warning text-center">
@@ -43,35 +43,33 @@
 <div id="rsa-algorithm-content" style="display: none">
     <div class="d-flex justify-content-around">
         <div class="d-flex flex-column">
-            <p class="text-warning text-center">Открытый ключ</p>
-            <textarea cols="50" rows="3" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <label class="text-warning">Открытый ключ
+                <input class="ms-2 bg-dark text-warning text-center border-warning border-2 rounded" readonly>
+            </label>
         </div>
         <div class="d-flex flex-column">
-            <p class="text-warning text-center">Закрытый ключ</p>
-            <textarea cols="50" rows="3" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <label class="text-warning">Закрытый ключ
+                <input class="ms-2 bg-dark text-warning text-center border-warning border-2 rounded" readonly>
+            </label>
         </div>
     </div>
-    <div class="d-flex justify-content-around">
-        <button type="button" class="mb-5 btn btn-outline-warning">Генерировать ключи</button>
+    <div class="d-flex flex-column align-items-center">
+        <button type="button" class="mb-2 btn btn-outline-warning">Генерировать ключи</button>
+        <p class="mb-5 text-warning text-center" id="rsa-keys-empty-warning" style="display: none">Сначала сгенерируйте
+            ключи</p>
     </div>
-    <div class="d-flex justify-content-around">
+    <div class="mt-4 d-flex justify-content-around">
         <div class="d-flex flex-column">
             <p class="text-warning text-center">Исходный текст</p>
-            <textarea cols="50" rows="16" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <textarea cols="50" rows="20" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
             <button type="button" class="mt-3 btn btn-outline-warning">Зашифровать</button>
-            <p class="mt-2 text-warning text-center" id="rsa-source-text-invalid-warning" style="display: none">Текст не
-                может содержать
-                английские буквы</p>
             <p class="mt-2 text-warning text-center" id="rsa-source-text-empty-warning" style="display: none">Укажите
                 текст для шифрования</p>
         </div>
         <div class="d-flex flex-column">
             <p class="text-warning text-center">Зашифрованный текст</p>
-            <textarea cols="50" rows="16" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
+            <textarea cols="50" rows="20" class="bg-dark text-warning border-warning border-2 rounded"></textarea>
             <button type="button" class="mt-3 btn btn-outline-warning">Дешифровать</button>
-            <p class="mt-2 text-warning text-center" id="rsa-encrypted-text-invalid-warning" style="display: none">Текст
-                не может содержать
-                английские буквы</p>
             <p class="mt-2 text-warning text-center" id="rsa-encrypted-text-empty-warning" style="display: none">Укажите
                 текст для
                 дешифрования</p>
