Added button for protocol

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 <div class="d-flex mb-5 justify-content-center">
     <button type="button" class="me-4 btn btn-warning" id="choose-caesar-cipher-btn">Шифр Цезаря</button>
     <button type="button" class="ms-4 btn btn-outline-warning" id="choose-rsa-algorithm-btn">Алгоритм RSA</button>
+    <button type="button" class="ms-4 btn btn-outline-warning" id="choose-diffie-hellman-protocol-btn">Протокол Диффи-Хеллмана</button>
 </div>
 <div id="caesar-cipher-content">
     <div class="d-flex flex-column my-4 align-items-center">
@@ -75,6 +76,8 @@
                 дешифрования</p>
         </div>
     </div>
+</div>
+<div id="diffie-hellman-protocol-content" style="display: none">
 </div>
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/caesarCipher.js"></script>
