--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
 <body class="bg-dark vh-100 d-flex flex-column justify-content-center">
 <div class="d-flex mb-5 justify-content-center">
     <button type="button" class="me-4 btn btn-warning" id="choose-caesar-cipher-btn">Шифр Цезаря</button>
-    <button type="button" class="ms-4 btn btn-outline-warning" id="choose-rsa-algorithm-btn">Алгоритм RSA</button>
-    <button type="button" class="ms-4 btn btn-outline-warning" id="choose-diffie-hellman-protocol-btn">Протокол Диффи-Хеллмана</button>
+    <button type="button" class="me-4 ms-4 btn btn-outline-warning" id="choose-rsa-algorithm-btn">Алгоритм RSA</button>
+    <button type="button" class="ms-4 btn btn-outline-warning" id="choose-diffie-hellman-protocol-btn">Протокол
+        Диффи-Хеллмана
+    </button>
 </div>
 <div id="caesar-cipher-content">
     <div class="d-flex flex-column my-4 align-items-center">
@@ -78,10 +80,54 @@
     </div>
 </div>
 <div id="diffie-hellman-protocol-content" style="display: none">
+    <div class="mt-5 d-flex justify-content-center">
+        <div class="d-flex flex-column">
+            <p class="text-warning">
+                Выбираются общие для абонентов А и В параметры (простые числа):<br>
+                w = <span></span><br>
+                n = <span></span>
+            </p>
+            <p class="mt-2 text-warning">
+                Для абонента А генерируется его секретный ключ (простое число):<br>
+                x<sub>A</sub> = <span></span>
+            </p>
+            <p class="mt-2 text-warning">
+                На основании секретного ключа абонента А формируется его публичный ключ:<br>
+                y<sub>A</sub> = <span></span>
+            </p>
+            <p class="mt-2 text-warning">
+                Для абонента В генерируется его секретный ключ (простое число):<br>
+                x<sub>B</sub> = <span></span>
+            </p>
+            <p class="mt-2 text-warning">
+                На основании секретного ключа абонента В формируется его публичный ключ:<br>
+                y<sub>B</sub> = <span></span>
+            </p>
+            <p class="mt-2 text-warning">
+                Абоненты А и В обмениваются своими публичными ключами y<sub>A</sub> и y<sub>B</sub>.
+            </p>
+            <p class="mt-2 text-warning">
+                Абонент А с публичным ключом абонента B формирует общий секретный ключ:<br>
+                K<sub>AB</sub> = <span></span>
+            </p>
+            <p class="mt-2 mb-0 text-warning">
+                Абонент В с публичным ключом абонента А формирует общий секретный ключ:<br>
+                K<sub>AB</sub> = <span></span>
+            </p>
+        </div>
+        <div class="ms-5 d-flex align-items-center">
+            <img class="border border-2 border-warning rounded h-100"
+                 src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHl3ZjVlcWEwZG9uZmQ2cW9qeGpzcXN4ajB6a25rMmc0Nml4bzU1YSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/1vlBgKjXEz1jTtsuiH/giphy.gif">
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <button type="button" class="mt-5 mb-2 btn btn-outline-warning">Сгенерировать общий секретный ключ</button>
+    </div>
 </div>
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/caesarCipher.js"></script>
 <script type="module" src="js/rsaAlgorithm.js"></script>
+<script type="module" src="js/diffieHellmanProtocol.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
